# mp-back-common

./: .dockerignore  .gitignore  Taskfile.yaml  azure-pipelines.yml  pyproject.toml
mp_back_common/: app.py  application_manager.py  logger.py
mp_back_common/api/: exceptions.py  responses.py  schemas.py  utils.py
mp_back_common/api/messages/: requests.py  responses.py
mp_back_common/api/products/: requests.py  responses.py
mp_back_common/api/topics/: exceptions.py  requests.py  responses.py  schemas.py
mp_back_common/core/: utils.py
mp_back_common/core/clients/: base.py  decorators.py  topics_service_client.py
mp_back_common/core/di/: container_manger.py
mp_back_common/core/di/modules/: __init__.py  authentication.py
mp_back_common/core/di/modules/connections/: _elasticsearch.py  _redis.py  api_client_session.py  database.py  elasticsearch.py  redis.py
mp_back_common/core/di/modules/mp_clients/: topics_service.py
mp_back_common/core/elasticsearh/: dependencies.py
mp_back_common/core/middlewares/: authentication.py  dto.py
mp_back_common/core/redis/: dependencies.py
mp_back_common/core/topics/: exceptions.py
mp_back_common/db/: dependencies.py  engine.py
src/: application_manager.py  settings.py
src/api/: schemas.py
src/api/topics/: exceptions.py  responses.py
src/core/clients/: base.py  dependencies.py  topics_service_client.py
src/core/products/: enums.py
src/core/redis/: cache.py  dependencies.py
src/db/: base.py
src/mp_back_common/api/: utils.py
src/mp_back_common/api/messages/: responses.py
src/mp_back_common/api/products/: exceptions.py
src/mp_back_common/api/topics/: requests.py
src/mp_back_common/core/: enums.py
src/mp_back_common/core/clients/: decorators.py
src/mp_back_common/core/di/modules/: __init__.py
src/mp_back_common/core/di/modules/connections/: _elasticsearch.py  api_client_session.py
src/mp_back_common/core/middlewares/: authentication.py
